# thunk

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
demo/: NARRATION.md  README.md  cards.html  film.mjs  markers.json  mux-audio.sh  narrate.mjs  package.json
docs/: .~lock.thunk-proposal.rtf#  DEMO-SCRIPT.md  DEMO-VIDEO.md  DESIGN-SPEC.md  HANDOFF.md  INFRA.md  PATHS.md  PITCH-3min.md  PITCH.md  PRD.md  PROPOSAL-for-google-docs.md  PROPOSAL.md  README.md  beautify-risk-sheet.gs  thunk-3min-pitch.html  thunk-addendum.html  thunk-proposal.html  thunk-proposal.rtf  thunk-risk-assessment.csv  thunk-risk-assessment.html  thunk-risk-assessment.tsv  thunk-risk-rows.tsv  thunk-value-proposition.html
docs/research/: spa-tech-research.md  ui-ux-research.md
docs/superpowers/plans/: 2026-07-06-kern-phase1.md  2026-07-06-thunk-phase1.md  2026-07-10-thunk-buildout.md  2026-07-12-thunk-mA-curriculum.md  2026-07-12-thunk-mB-gates.md  2026-07-12-thunk-mC-simulator.md  2026-07-12-thunk-mD-finale.md  2026-07-12-thunk-mE-trace.md  2026-07-12-thunk-mF-web.md  2026-07-13-thunk-mG-profiles.md  2026-07-13-thunk-mH-kit-readme.md
docs/superpowers/specs/: 2026-07-14-thunk-site-spec.md  2026-07-16-capstone-first-patch-spec.md  2026-07-16-lesson-depth-spec.md
kern-cli/: Cargo.toml
kern-cli/src/: main.rs
kern-content/: Cargo.toml
kern-content/modules/m1-kernel/: checks.ron  module.ron
kern-content/src/: lib.rs
kern-core/: Cargo.toml
kern-core/src/: check.rs  content.rs  lib.rs
kern-sim/: Cargo.toml
kern-sim/src/: boot.rs  panel.rs
scripts/: profile-audit.sh  qemu-smoke.sh  vocab-lint.sh
site/: .gitattributes  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
site/e2e/: README.md  a11y.spec.ts  bench.spec.ts  calibrate.spec.ts  checks.spec.ts  content-data.ts  easter-eggs.spec.ts  fixtures.ts  journey.spec.ts  launchpad.spec.ts  mastery.spec.ts  motion.spec.ts  progress.spec.ts  smoke.spec.ts  widgets.spec.ts
site/scripts/: bench-shots.mjs  build-info.mjs  check-shots.mjs  colophon-shots.mjs  doom-shots.mjs  launchpad-shots.mjs  og.mjs  perf-budget.mjs  shell-shots.mjs  widget-shots-db.mjs  widget-shots.mjs
site/src/: app.css  app.html
site/src/lib/: build.json  content.json  content.ts  grade.test.ts  grade.ts  konami.test.ts  konami.ts  meta.ts  palette.test.ts  palette.ts  patch.svelte.ts  patch.test.ts  patch.ts  placement.test.ts  placement.ts  resume.test.ts  resume.ts  sitemap.test.ts  sitemap.ts  theme.svelte.ts  xp-curve.test.ts  xp-curve.ts  xp.svelte.ts
site/src/lib/bench/: cheats.test.ts  cheats.ts  doom.test.ts  doom.ts  sim.ts  trace.test.ts  trace.ts  window.test.ts  window.ts
site/src/lib/components/: ChannelStrip.svelte  CheckCard.svelte  CommandPalette.svelte  Degauss.svelte  Meta.svelte  ModuleGlyph.svelte  RailNav.svelte  SiteMark.svelte  ThemeToggle.svelte  XpMeter.svelte  XpToast.svelte
site/src/lib/widgets/: BitLab.svelte  ByteDecoder.svelte  DiffReader.svelte  FrameBudget.svelte  OwnershipMove.svelte  PixelForge.svelte  SpiScope.svelte  VolatileMemory.svelte  borrow.test.ts  borrow.ts  byte-decode.test.ts  byte-decode.ts  diff.test.ts  diff.ts  format.test.ts  format.ts  frame-budget.test.ts  frame-budget.ts  registry.ts  rgb565.test.ts  rgb565.ts  spi-waveform.test.ts  spi-waveform.ts  volatile.test.ts  volatile.ts
site/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
site/src/routes/(app)/: +error.svelte  +layout.svelte
site/src/routes/(app)/bench/: +page.svelte
site/src/routes/(app)/calibrate/: +page.svelte
site/src/routes/(app)/colophon/: +page.svelte
site/src/routes/(app)/first-patch/: +page.svelte
site/src/routes/(marketing)/: +layout.svelte  +page.svelte
site/src/routes/bench/: +page.svelte
site/src/routes/sitemap.xml/: +server.ts
site/static/: _headers  robots.txt
site/static/doom/: README.md  doom.js  doom.wasm
site/wasm/: .gitignore  Cargo.toml
site/wasm-doom/: build.sh
site/wasm-doom/doomgeneric/doomgeneric/: doomgeneric_wasm.c
site/wasm/src/: lib.rs
thunk-cli/: Cargo.toml
thunk-cli/src/: export.rs  kit.rs  main.rs
thunk-content/: Cargo.toml
thunk-content/modules/: placement.ron
thunk-content/modules-open/m7-first-patch/: 01-picking-a-project.md  02-a-docs-fix.md  03-review-and-merge.md  checks.ron  module.ron
thunk-content/modules/m0-power-on/: 01-the-machine.md  02-bits-and-bytes.md  03-what-is-a-program.md  04-what-is-code.md  05-running-a-program.md  checks.ron  module.ron
thunk-content/modules/m1-kernel/: 01-programs-and-os.md  02-syscalls.md  03-files-and-devices.md  04-memory-and-mmap.md  05-drivers.md  checks.ron  module.ron
thunk-content/modules/m2-rust/: 01-why-rust.md  02-ownership.md  03-borrowing.md  04-no-std.md  05-bits-in-types.md  checks.ron  module.ron
thunk-content/modules/m3-bus/: 01-wires-and-voltage.md  02-clock-and-data.md  03-chip-select.md  04-reading-a-trace.md  checks.ron  module.ron
thunk-content/modules/m4-panel/: 01-pixels-and-grids.md  02-color-in-sixteen-bits.md  03-the-framebuffer.md  04-commands-and-data.md  checks.ron  module.ron
thunk-content/modules/m5-doom/: 01-why-doom.md  02-frames-to-the-panel.md  03-the-whole-stack.md  checks.ron  module.ron
thunk-content/modules/m6-open-source/: 01-what-open-source-is.md  02-licenses-in-plain-terms.md  03-version-control-in-the-open.md  04-reading-a-diff.md  05-the-culture-of-merit.md  checks.ron  module.ron
thunk-content/src/: lib.rs
thunk-core/: Cargo.toml
thunk-core/src/: check.rs  content.rs  gate.rs  lib.rs  placement.rs  progress.rs  state.rs
thunk-hw/: Cargo.toml
thunk-hw/src/: bus.rs  gpio.rs  ioctl.rs  lib.rs
thunk-sim/: Cargo.toml
thunk-sim/src/: boot.rs  display.rs  finale.rs  ili9341.rs  lib.rs  panel.rs  spi.rs  trace.rs
thunk-tui/: Cargo.toml
thunk-tui/src/: app.rs  lib.rs  ui.rs
thunk-web/: Cargo.toml
thunk-web/assets/: check.js  thunk.css
thunk-web/src/: course.rs  lib.rs  markdown.rs  page.rs  sim.rs
(+7 files in other folders)
