[workspace]
resolver = "2"
members = ["thunk-core", "thunk-content", "thunk-sim", "thunk-web", "thunk-tui", "thunk-cli", "thunk-hw"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Penn Porterfield"]
repository = "https://github.com/melonmelonz/thunk"
description = "thunk: a self-contained, offline systems course. From true zero to DOOM on a panel."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.8"
rust-embed = "8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
ratatui = { version = "0.30", default-features = false }
crossterm = "0.28"
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
