[package]
name = "kern-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "kern command-line front-end."

[[bin]]
name = "kern"
path = "src/main.rs"

[dependencies]
kern-content = { path = "../kern-content" }
kern-sim = { path = "../kern-sim" }
clap = { workspace = true }
