[package]
name = "thunk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "thunk command-line front-end."

[[bin]]
name = "thunk"
path = "src/main.rs"

[dependencies]
thunk-content = { path = "../thunk-content" }
thunk-core = { path = "../thunk-core" }
thunk-sim = { path = "../thunk-sim" }
thunk-tui = { path = "../thunk-tui" }
thunk-web = { path = "../thunk-web" }
clap = { workspace = true }
