[package]
name = "thunk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "thunk command-line front-end."

[[bin]]
name = "thunk"
path = "src/main.rs"

[dependencies]
thunk-content = { path = "../thunk-content" }
thunk-core = { path = "../thunk-core" }
thunk-sim = { path = "../thunk-sim" }
thunk-tui = { path = "../thunk-tui" }
thunk-web = { path = "../thunk-web" }
thunk-hw = { path = "../thunk-hw", optional = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = "1"

[features]
# The open build: the real spidev/GPIO backend + the M7 module. The inside
# build is the default build; this feature is never on inside a facility.
open = ["dep:thunk-hw", "thunk-content/open"]
