[package]
name = "thunk-content"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "thunk curriculum, embedded at compile time."

[dependencies]
thunk-core = { path = "../thunk-core" }
serde = { workspace = true }
ron = { workspace = true }
rust-embed = { workspace = true }
