[package]
name = "thunk-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "thunk course rendered as a fully offline static site."

[dependencies]
thunk-content = { path = "../thunk-content" }
thunk-core = { path = "../thunk-core" }
thunk-sim = { path = "../thunk-sim" }
