[package]
name = "thunk-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Penn Porterfield"]
description = "Thin wasm-bindgen wrapper over thunk-sim: the live bench for the public course site."
publish = false

# Standalone crate, excluded from the workspace (see root Cargo.toml). Its own
# lockfile keeps wasm-bindgen out of the inside build's dependency graph.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The real simulator, verified dep-free. Path dep, no version churn.
thunk-sim = { path = "../../thunk-sim" }
# Only pulled in for the wasm target; native `cargo test` skips it, so the
# pure conversion/encoding logic tests without a wasm toolchain.
wasm-bindgen = "0.2"

[profile.release]
# Small, fast wasm: optimize for size, one codegen unit, fat LTO. wasm-opt -Oz
# runs on top of this via wasm-pack.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# rustc's default wasm32 target features (bulk-memory, sign-ext, ...) are ahead
# of the wasm-opt bundled by some wasm-pack builds; enable them explicitly so
# wasm-opt validates the input everywhere it runs (locally and in CI).
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
]
